--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended",
-        "react-app"
+        "plugin:react/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 7,
@@ -16,6 +15,7 @@
     },
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "semi": [2, "always"]
       }
 }
