--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "lintfix": "eslint --fix ./src --ext .js"
   },
   "jest": {
     "collectCoverageFrom": [
